--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "express": "^4.16.2",
     "node-fetch": "^2.1.2",
+    "npm": "^6.1.0",
     "parse-server": "^2.7.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "nodemon": "^1.14.1"
   },
   "author": "",
