--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "express": "^4.16.2",
+    "firebase-admin": "^6.0.0",
     "lodash": "^4.17.10",
     "node-fetch": "^2.1.2",
     "npm": "^6.1.0",
