--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "jest": "^23.6.0",
     "nodemon": "^1.14.1"
   },
   "author": "",
