fix: npm package reference

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "babel-cli": "^6.26.0",
     "express": "^4.16.2",
     "firebase-admin": "^6.0.0",
+    "jsrsasign": "^8.0.12",
+    "kerberos": "~0.0.x",
     "lodash": "^4.17.10",
     "node-fetch": "^2.1.2",
     "npm": "^6.1.0",
-    "kerberos": "~0.0.x",
     "parse": "~1.8.0",
     "parse-server": "^2.7.1",
     "simple-parse-smtp-adapter": "^1.0.9"
