--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
     "start": "babel-node $NODE_DEBUG_OPTION src/index.js"
   },
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "express": "^4.16.2",
-    "firebase-admin": "^6.0.0",
-    "jsrsasign": "^8.0.12",
-    "kerberos": "~0.0.x",
-    "lodash": "^4.17.10",
-    "node-fetch": "^2.1.2",
-    "npm": "^6.1.0",
-    "parse": "~1.8.0",
-    "parse-server": "^2.7.1",
-    "simple-parse-smtp-adapter": "^1.0.9"
+    "babel-cli": "6.26.0",
+    "express": "4.16.4",
+    "firebase-admin": "^7.0.0",
+    "firebase-functions": "^2.2.0",
+    "jsrsasign": "8.0.12",
+    "lodash": "4.17.11",
+    "node-fetch": "2.3.0",
+    "npm": "6.7.0",
+    "parse": "1.8.0",
+    "parse-server": "2.8.4",
+    "simple-parse-smtp-adapter": "1.0.9"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "jest": "^23.6.0",
-    "nodemon": "^1.14.1"
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "babel-preset-stage-3": "6.24.1",
+    "jest": "24.0.0",
+    "nodemon": "1.18.9"
   },
   "author": "",
   "license": "ISC"
