--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js --exec babel-node",
-    "start": "babel-node $NODE_DEBUG_OPTION src/index.js"
+    "start-node": "babel-node $NODE_DEBUG_OPTION src/index.js",
+    "start": "node src/index.js"
   },
   "dependencies": {
     "babel-cli": "6.26.0",
@@ -26,5 +27,8 @@
     "nodemon": "1.18.9"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": "11.9.0"
+  }
 }
