--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "server",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js --exec babel-node",
-    "start-node": "babel-node $NODE_DEBUG_OPTION src/index.js",
-    "start": "node src/index.js"
+    "dev": "nodemon index.js --exec node",
+    "start-node": "node $NODE_DEBUG_OPTION index.js",
+    "start": "node index.js"
   },
   "dependencies": {
-    "babel-cli": "6.26.0",
+    "axios": "^0.18.0",
     "express": "4.16.4",
     "firebase-admin": "^7.0.0",
     "firebase-functions": "^2.2.0",
@@ -20,15 +20,9 @@
     "simple-parse-smtp-adapter": "1.0.9"
   },
   "devDependencies": {
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
-    "babel-preset-stage-3": "6.24.1",
     "jest": "24.0.0",
     "nodemon": "1.18.9"
   },
   "author": "",
-  "license": "ISC",
-  "engines": {
-    "node": "11.9.0"
-  }
+  "license": "ISC"
 }
