--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "express": "4.16.4",
+    "axios": "^0.19.0",
+    "express": "^4.17.1",
     "firebase-admin": "^7.0.0",
     "firebase-functions": "^2.2.0",
     "jsrsasign": "8.0.12",
